2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/twisted/portal.py:
	  cleanup
	* flumotion/test/test_pb.py:
	* flumotion/twisted/pb.py:
	  remove deprecated stuff:
	  FMClientFactory, _PortalRoot, _FPortalAuthChallenger

2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/admin.py:
	* flumotion/worker/worker.py:
	  doc fixes
	* flumotion/twisted/portal.py:
	  document, remove FlumotionPortal

2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/manager.py:
	  Remove ManagerCredentialsChecker which was deprecated.

2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/admin.py:
	* flumotion/twisted/portal.py:
	  The avatar was being removed twice, once by heaven, once by
	  detached.
	  Take opportunity to store avatarId's for admin and consistentify
	  with other heavens.
	  Still need to assign a unique id to admin clients.

2004-10-17  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/http/Makefile.am:
	* flumotion/component/http/http.py:
	* flumotion/component/http/http_resources.py:
	* flumotion/component/http/resources.py:
	* flumotion/test/test_http.py:
	* flumotion/test/test_wizard.py:
	  Johan needs to update this

2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/component.py:
	* flumotion/twisted/portal.py:
	* flumotion/worker/job.py:
	* flumotion/worker/main.py:
	* flumotion/worker/worker.py:
	  component now logs in with same options as the worker it got
	  started from

2004-10-17  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/wizard.py: Add very simple unittest for wizard
	and its steps

	* flumotion/wizard/steps.py: Rename from wizard_step to make
	thomas happy

	* flumotion/wizard/wizard.py:
	* flumotion/wizard/wizard_step.py:

	Make it possible to go back to major steps. Fixes quite a few bugs.
	Beginning of cleanup for the WizardStep API.
	